--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "yarn watch:css && react-scripts start",
-    "build": "yarn build:css && react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "build:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
-    "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -37,10 +35,10 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000",
   "devDependencies": {
     "autoprefixer": "^10.4.8",
-    "postcss-cli": "^10.0.0",
+    "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
